// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`sqle//PipelineConfiguration/Create render create pipeline 1`] = `
<body>
  <div>
    <div
      class="actiontech-page-header-namespace fixed-style css-1xspr0w"
    >
      <div
        class="title"
      >
        <a
          href="/sqle/project/700300/pipeline-configuration"
        >
          <button
            class="ant-btn ant-btn-default basic-button-wrapper css-10ae2zl"
            type="button"
          >
            <span
              class="ant-btn-icon"
            >
              <svg
                height="16"
                viewBox="0 0 16 16"
                width="16"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M5.219 7.333h8.114v1.334H5.22l3.576 3.576-.943.942L2.667 8l5.185-5.185.943.942z"
                  fill="currentColor"
                />
              </svg>
            </span>
            <span>
              返回流水线配置列表
            </span>
          </button>
        </a>
      </div>
      <div
        class="extra"
      >
        <div
          class="ant-space ant-space-horizontal ant-space-align-center"
        >
          <div
            class="ant-space-item"
            style="margin-right: 8px;"
          >
            <button
              class="ant-btn ant-btn-default basic-button-wrapper css-10ae2zl"
              type="button"
            >
              <span>
                重 置
              </span>
            </button>
          </div>
          <div
            class="ant-space-item"
          >
            <button
              class="ant-btn ant-btn-primary basic-button-wrapper css-10ae2zl"
              type="button"
            >
              <span>
                保 存
              </span>
            </button>
          </div>
        </div>
      </div>
    </div>
    <form
      class="ant-form ant-form-horizontal hasTopHeader css-19jfn7e"
    >
      <section
        class="css-1114g56"
      >
        <section
          class="css-bspaai"
        >
          <h3
            class="ant-typography css-p50odb"
          >
            <svg
              class="title-icon"
              height="40"
              viewBox="0 0 24 28"
              width="42"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M4 3.333v5.334h16V3.333h2.675c.732 0 1.325.594 1.325 1.325v21.35c0 .732-.593 1.325-1.325 1.325H1.325A1.325 1.325 0 0 1 0 26.01V4.658c0-.732.593-1.325 1.325-1.325zm4 17.334H5.333v2.666H8zm0-4H5.333v2.666H8zm0-4H5.333v2.666H8zm9.333-12V6H6.667V.667z"
                fill="#C3C6CD"
              />
            </svg>
            创建流水线配置
          </h3>
          <h1
            class="ant-typography css-1eepp70"
          >
            基础配置
          </h1>
          <div
            class="ant-form-item has-required-style has-label-tip css-1jlm9cy ant-form-item-has-success"
          >
            <div
              class="ant-row ant-form-item-row"
            >
              <div
                class="ant-col ant-col-11 ant-form-item-label ant-form-item-label-left"
              >
                <label
                  class="ant-form-item-required ant-form-item-no-colon"
                  for="name"
                  title=""
                >
                  <div
                    class="label-cont-custom"
                  >
                    <div>
                      流水线名称
                    </div>
                    <div
                      class="tip-content-box"
                    >
                      请填写上游CI/CD平台创建的流水线名称，或其他方便理解、建立关联的名称。
                    </div>
                  </div>
                </label>
              </div>
              <div
                class="ant-col ant-col-11 ant-col-push-2 ant-form-item-control"
              >
                <div
                  class="ant-form-item-control-input"
                >
                  <div
                    class="ant-form-item-control-input-content"
                  >
                    <input
                      aria-required="true"
                      class="ant-input ant-input-status-success basic-input-wrapper css-1pd1cd5"
                      id="name"
                      placeholder="请输入{{name}}"
                      type="text"
                      value="test_pipeline"
                    />
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            class="ant-form-item has-label-tip css-1jlm9cy ant-form-item-has-success"
          >
            <div
              class="ant-row ant-form-item-row"
            >
              <div
                class="ant-col ant-col-11 ant-form-item-label ant-form-item-label-left"
              >
                <label
                  class="ant-form-item-no-colon"
                  for="description"
                  title=""
                >
                  <div
                    class="label-cont-custom"
                  >
                    <div>
                      流水线描述
                    </div>
                    <div
                      class="tip-content-box"
                    >
                      请输入对此条流水线的用途、预期等相关信息。
                    </div>
                  </div>
                </label>
              </div>
              <div
                class="ant-col ant-col-11 ant-col-push-2 ant-form-item-control"
              >
                <div
                  class="ant-form-item-control-input"
                >
                  <div
                    class="ant-form-item-control-input-content"
                  >
                    <textarea
                      class="ant-input ant-input-status-success basic-input-wrapper css-1pd1cd5"
                      id="description"
                      placeholder="请输入{{name}}"
                    >
                      desc
                    </textarea>
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            class="ant-form-item has-label-tip css-1jlm9cy ant-form-item-has-success"
          >
            <div
              class="ant-row ant-form-item-row"
            >
              <div
                class="ant-col ant-col-11 ant-form-item-label ant-form-item-label-left"
              >
                <label
                  class="ant-form-item-no-colon"
                  for="address"
                  title=""
                >
                  <div
                    class="label-cont-custom"
                  >
                    <div>
                      流水线地址
                    </div>
                    <div
                      class="tip-content-box"
                    >
                      请提供您在上游CI/CD平台创建的流水线项目地址，如http(s)://ip:port/job/jobname/，方便建立关联。如尚未创建流水线，可后续编辑流水线补充。
                    </div>
                  </div>
                </label>
              </div>
              <div
                class="ant-col ant-col-11 ant-col-push-2 ant-form-item-control"
              >
                <div
                  class="ant-form-item-control-input"
                >
                  <div
                    class="ant-form-item-control-input-content"
                  >
                    <input
                      class="ant-input ant-input-status-success basic-input-wrapper css-1pd1cd5"
                      id="address"
                      placeholder="请输入{{name}}"
                      type="text"
                      value="http://127.0.0.1"
                    />
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            class="ant-form-item css-1jlm9cy"
          >
            <div
              class="ant-row ant-form-item-row"
            >
              <div
                class="ant-col ant-col-24 ant-form-item-control"
              >
                <div
                  class="ant-form-item-control-input"
                >
                  <div
                    class="ant-form-item-control-input-content"
                  >
                    <section
                      class="css-xsucw9"
                    >
                      <h1
                        class="ant-typography css-1eepp70"
                      >
                        <div
                          class="ant-space ant-space-horizontal ant-space-align-center sub-title"
                        >
                          <div
                            class="ant-space-item"
                            style="margin-right: 8px;"
                          >
                            节点配置
                          </div>
                          <div
                            class="ant-space-item"
                          >
                            <button
                              class="ant-btn ant-btn-primary basic-button-wrapper css-10ae2zl"
                              type="button"
                            >
                              <span>
                                添加节点
                              </span>
                            </button>
                          </div>
                        </div>
                      </h1>
                      <div
                        class="ant-table-wrapper actiontech-table-namespace css-fxd6ka"
                      >
                        <div
                          class="ant-spin-nested-loading"
                        >
                          <div
                            class="ant-spin-container"
                          >
                            <div
                              class="ant-table ant-table-empty ant-table-fixed-column ant-table-scroll-horizontal ant-table-has-fix-right"
                            >
                              <div
                                class="ant-table-container"
                              >
                                <div
                                  class="ant-table-content"
                                  style="overflow-x: auto; overflow-y: hidden;"
                                >
                                  <table
                                    style="min-width: 100%; table-layout: auto;"
                                  >
                                    <colgroup>
                                      <col
                                        style="width: 80px;"
                                      />
                                      <col />
                                      <col />
                                      <col
                                        style="width: 164px;"
                                      />
                                    </colgroup>
                                    <thead
                                      class="ant-table-thead"
                                    >
                                      <tr>
                                        <td
                                          class="ant-table-cell"
                                          style="text-align: center;"
                                        />
                                        <th
                                          class="ant-table-cell"
                                          scope="col"
                                        >
                                          节点名称
                                        </th>
                                        <th
                                          class="ant-table-cell"
                                          scope="col"
                                        >
                                          节点类型
                                        </th>
                                        <th
                                          class="ant-table-cell actiontech-table-actions-column ant-table-cell-fix-right ant-table-cell-fix-right-first"
                                          scope="col"
                                          style="position: sticky; right: 0px;"
                                        >
                                          操作
                                        </th>
                                      </tr>
                                    </thead>
                                    <tbody
                                      class="ant-table-tbody"
                                    >
                                      <tr
                                        aria-hidden="true"
                                        class="ant-table-measure-row"
                                        style="height: 0px; font-size: 0px;"
                                      >
                                        <td
                                          style="padding: 0px; border: 0px; height: 0px;"
                                        >
                                          <div
                                            style="height: 0px; overflow: hidden;"
                                          >
                                             
                                          </div>
                                        </td>
                                        <td
                                          style="padding: 0px; border: 0px; height: 0px;"
                                        >
                                          <div
                                            style="height: 0px; overflow: hidden;"
                                          >
                                             
                                          </div>
                                        </td>
                                        <td
                                          style="padding: 0px; border: 0px; height: 0px;"
                                        >
                                          <div
                                            style="height: 0px; overflow: hidden;"
                                          >
                                             
                                          </div>
                                        </td>
                                        <td
                                          style="padding: 0px; border: 0px; height: 0px;"
                                        >
                                          <div
                                            style="height: 0px; overflow: hidden;"
                                          >
                                             
                                          </div>
                                        </td>
                                      </tr>
                                      <tr
                                        aria-describedby="DndDescribedBy-1"
                                        aria-disabled="false"
                                        aria-pressed="true"
                                        aria-roledescription="sortable"
                                        class="ant-table-placeholder"
                                        role="button"
                                        style="position: relative; z-index: 999; transition: transform 0ms linear;"
                                        tabindex="0"
                                      >
                                        <td
                                          class="ant-table-cell"
                                          colspan="4"
                                        >
                                          <div
                                            class="ant-table-expanded-row-fixed"
                                            style="width: 0px; position: sticky; left: 0px; overflow: hidden;"
                                          />
                                        </td>
                                      </tr>
                                    </tbody>
                                  </table>
                                </div>
                              </div>
                            </div>
                          </div>
                        </div>
                      </div>
                      <div
                        id="DndDescribedBy-1"
                        style="display: none;"
                      >
                        
    To pick up a draggable item, press the space bar.
    While dragging, use the arrow keys to move the item.
    Press space again to drop the item in its new position, or press escape to cancel.
  
                      </div>
                      <div
                        aria-atomic="true"
                        aria-live="assertive"
                        id="DndLiveRegion-1"
                        role="status"
                        style="position: fixed; top: 0px; left: 0px; width: 1px; height: 1px; margin: -1px; border: 0px; padding: 0px; overflow: hidden; clip-path: inset(100%); white-space: nowrap;"
                      />
                    </section>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </section>
      </section>
    </form>
  </div>
  <div>
    <div
      class="ant-drawer ant-drawer-right ant-drawer-open"
      tabindex="-1"
    >
      <div
        class="ant-drawer-mask"
      />
      <div
        aria-hidden="true"
        data-sentinel="start"
        style="width: 0px; height: 0px; overflow: hidden; outline: none; position: absolute;"
        tabindex="0"
      />
      <div
        class="ant-drawer-content-wrapper"
        style="width: 480px;"
      >
        <div
          aria-modal="true"
          class="ant-drawer-content basic-drawer-wrapper css-8hszk7"
          role="dialog"
        >
          <div
            class="ant-drawer-wrapper-body"
          >
            <div
              class="ant-drawer-header"
            >
              <div
                class="ant-drawer-header-title"
              >
                <div
                  class="ant-drawer-title"
                >
                  创建节点
                </div>
              </div>
            </div>
            <div
              class="ant-drawer-body"
            >
              <div
                class="closed-icon-custom"
              >
                <span
                  aria-label="close"
                  class="anticon anticon-close"
                  data-testid="basic-drawer-close-icon"
                  role="img"
                >
                  <svg
                    aria-hidden="true"
                    data-icon="close"
                    fill="currentColor"
                    fill-rule="evenodd"
                    focusable="false"
                    height="1em"
                    viewBox="64 64 896 896"
                    width="1em"
                  >
                    <path
                      d="M799.86 166.31c.02 0 .04.02.08.06l57.69 57.7c.04.03.05.05.06.08a.12.12 0 010 .06c0 .03-.02.05-.06.09L569.93 512l287.7 287.7c.04.04.05.06.06.09a.12.12 0 010 .07c0 .02-.02.04-.06.08l-57.7 57.69c-.03.04-.05.05-.07.06a.12.12 0 01-.07 0c-.03 0-.05-.02-.09-.06L512 569.93l-287.7 287.7c-.04.04-.06.05-.09.06a.12.12 0 01-.07 0c-.02 0-.04-.02-.08-.06l-57.69-57.7c-.04-.03-.05-.05-.06-.07a.12.12 0 010-.07c0-.03.02-.05.06-.09L454.07 512l-287.7-287.7c-.04-.04-.05-.06-.06-.09a.12.12 0 010-.07c0-.02.02-.04.06-.08l57.7-57.69c.03-.04.05-.05.07-.06a.12.12 0 01.07 0c.03 0 .05.02.09.06L512 454.07l287.7-287.7c.04-.04.06-.05.09-.06a.12.12 0 01.07 0z"
                    />
                  </svg>
                </span>
              </div>
              <form
                class="ant-form ant-form-vertical"
              >
                <div
                  class="ant-form-item css-1jlm9cy"
                >
                  <div
                    class="ant-row ant-form-item-row"
                  >
                    <div
                      class="ant-col ant-form-item-label"
                    >
                      <label
                        class="ant-form-item-required"
                        for="name"
                        title="节点名称"
                      >
                        节点名称
                      </label>
                    </div>
                    <div
                      class="ant-col ant-form-item-control"
                    >
                      <div
                        class="ant-form-item-control-input"
                      >
                        <div
                          class="ant-form-item-control-input-content"
                        >
                          <input
                            aria-required="true"
                            class="ant-input basic-input-wrapper css-1pd1cd5"
                            id="name"
                            placeholder="请输入{{name}}"
                            type="text"
                            value=""
                          />
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  class="ant-form-item css-1jlm9cy"
                >
                  <div
                    class="ant-row ant-form-item-row"
                  >
                    <div
                      class="ant-col ant-form-item-label"
                    >
                      <label
                        class="ant-form-item-required"
                        for="type"
                        title="节点类型"
                      >
                        节点类型
                      </label>
                    </div>
                    <div
                      class="ant-col ant-form-item-control"
                    >
                      <div
                        class="ant-form-item-control-input"
                      >
                        <div
                          class="ant-form-item-control-input-content"
                        >
                          <div
                            aria-required="true"
                            class="ant-select ant-select-in-form-item basic-select-wrapper css-x5nat1 ant-select-single ant-select-show-arrow"
                          >
                            <div
                              class="ant-select-selector"
                            >
                              <span
                                class="ant-select-selection-search"
                              >
                                <input
                                  aria-activedescendant="type_list_0"
                                  aria-autocomplete="list"
                                  aria-controls="type_list"
                                  aria-expanded="false"
                                  aria-haspopup="listbox"
                                  aria-owns="type_list"
                                  aria-required="true"
                                  autocomplete="off"
                                  class="ant-select-selection-search-input"
                                  id="type"
                                  readonly=""
                                  role="combobox"
                                  style="opacity: 0;"
                                  type="search"
                                  unselectable="on"
                                  value=""
                                />
                              </span>
                              <span
                                class="ant-select-selection-item"
                                title="审核"
                              >
                                审核
                              </span>
                            </div>
                            <span
                              aria-hidden="true"
                              class="ant-select-arrow"
                              style="user-select: none;"
                              unselectable="on"
                            >
                              <span
                                aria-label="down"
                                class="anticon anticon-down ant-select-suffix"
                                role="img"
                              >
                                <svg
                                  aria-hidden="true"
                                  data-icon="down"
                                  fill="currentColor"
                                  focusable="false"
                                  height="1em"
                                  viewBox="64 64 896 896"
                                  width="1em"
                                >
                                  <path
                                    d="M884 256h-75c-5.1 0-9.9 2.5-12.9 6.6L512 654.2 227.9 262.6c-3-4.1-7.8-6.6-12.9-6.6h-75c-6.5 0-10.3 7.4-6.5 12.7l352.6 486.1c12.8 17.6 39 17.6 51.7 0l352.6-486.1c3.9-5.3.1-12.7-6.4-12.7z"
                                  />
                                </svg>
                              </span>
                            </span>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  class="ant-form-item has-required-style has-label-tip css-1jlm9cy"
                >
                  <div
                    class="ant-row ant-form-item-row"
                  >
                    <div
                      class="ant-col ant-form-item-label"
                    >
                      <label
                        class="ant-form-item-required"
                        for="object_type"
                        title=""
                      >
                        <div
                          class="label-cont-custom"
                        >
                          <div>
                            审核对象类型
                          </div>
                          <div
                            class="tip-content-box"
                          >
                            当前支持审核SQL文件及MyBatis文件。
                          </div>
                        </div>
                      </label>
                    </div>
                    <div
                      class="ant-col ant-form-item-control"
                    >
                      <div
                        class="ant-form-item-control-input"
                      >
                        <div
                          class="ant-form-item-control-input-content"
                        >
                          <div
                            aria-required="true"
                            class="ant-select ant-select-in-form-item basic-select-wrapper css-x5nat1 ant-select-single ant-select-show-arrow"
                          >
                            <div
                              class="ant-select-selector"
                            >
                              <span
                                class="ant-select-selection-search"
                              >
                                <input
                                  aria-activedescendant="object_type_list_0"
                                  aria-autocomplete="list"
                                  aria-controls="object_type_list"
                                  aria-expanded="false"
                                  aria-haspopup="listbox"
                                  aria-owns="object_type_list"
                                  aria-required="true"
                                  autocomplete="off"
                                  class="ant-select-selection-search-input"
                                  id="object_type"
                                  readonly=""
                                  role="combobox"
                                  style="opacity: 0;"
                                  type="search"
                                  unselectable="on"
                                  value=""
                                />
                              </span>
                              <span
                                class="ant-select-selection-placeholder"
                              >
                                请选择{{name}}
                              </span>
                            </div>
                            <span
                              aria-hidden="true"
                              class="ant-select-arrow"
                              style="user-select: none;"
                              unselectable="on"
                            >
                              <span
                                aria-label="down"
                                class="anticon anticon-down ant-select-suffix"
                                role="img"
                              >
                                <svg
                                  aria-hidden="true"
                                  data-icon="down"
                                  fill="currentColor"
                                  focusable="false"
                                  height="1em"
                                  viewBox="64 64 896 896"
                                  width="1em"
                                >
                                  <path
                                    d="M884 256h-75c-5.1 0-9.9 2.5-12.9 6.6L512 654.2 227.9 262.6c-3-4.1-7.8-6.6-12.9-6.6h-75c-6.5 0-10.3 7.4-6.5 12.7l352.6 486.1c12.8 17.6 39 17.6 51.7 0l352.6-486.1c3.9-5.3.1-12.7-6.4-12.7z"
                                  />
                                </svg>
                              </span>
                            </span>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  class="ant-form-item has-required-style has-label-tip css-1jlm9cy"
                >
                  <div
                    class="ant-row ant-form-item-row"
                  >
                    <div
                      class="ant-col ant-form-item-label"
                    >
                      <label
                        class="ant-form-item-required"
                        for="object_path"
                        title=""
                      >
                        <div
                          class="label-cont-custom"
                        >
                          <div>
                            审核对象路径
                          </div>
                          <div
                            class="tip-content-box"
                          >
                            请填写要审核的SQL对象路径，帮助平台生成SQL采集指令，SQL采集指令将用于CI/CD平台配置。需要输入文件的绝对路径，如/opt/sqle/std.log，或文件所在的文件夹路径，如/opt/sqle/。
                          </div>
                        </div>
                      </label>
                    </div>
                    <div
                      class="ant-col ant-form-item-control"
                    >
                      <div
                        class="ant-form-item-control-input"
                      >
                        <div
                          class="ant-form-item-control-input-content"
                        >
                          <input
                            aria-required="true"
                            class="ant-input basic-input-wrapper css-1pd1cd5"
                            id="object_path"
                            placeholder="请输入{{name}}"
                            type="text"
                            value=""
                          />
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  class="ant-form-item has-required-style has-label-tip css-1jlm9cy"
                >
                  <div
                    class="ant-row ant-form-item-row"
                  >
                    <div
                      class="ant-col ant-form-item-label"
                    >
                      <label
                        class=""
                        for="audit_method"
                        title=""
                      >
                        <div
                          class="label-cont-custom"
                        >
                          <div>
                            审核方式
                          </div>
                          <div
                            class="tip-content-box"
                          >
                            当需要结合数据源获取审核结果时，请选择在线审核，并指定数据源；如仅需对SQL本身做语法审核，请选择离线审核。
                          </div>
                        </div>
                      </label>
                    </div>
                    <div
                      class="ant-col ant-form-item-control"
                    >
                      <div
                        class="ant-form-item-control-input"
                      >
                        <div
                          class="ant-form-item-control-input-content"
                        >
                          <div
                            class="ant-select ant-select-in-form-item basic-select-wrapper css-x5nat1 ant-select-single ant-select-show-arrow"
                          >
                            <div
                              class="ant-select-selector"
                            >
                              <span
                                class="ant-select-selection-search"
                              >
                                <input
                                  aria-activedescendant="audit_method_list_0"
                                  aria-autocomplete="list"
                                  aria-controls="audit_method_list"
                                  aria-expanded="false"
                                  aria-haspopup="listbox"
                                  aria-owns="audit_method_list"
                                  autocomplete="off"
                                  class="ant-select-selection-search-input"
                                  id="audit_method"
                                  readonly=""
                                  role="combobox"
                                  style="opacity: 0;"
                                  type="search"
                                  unselectable="on"
                                  value=""
                                />
                              </span>
                              <span
                                class="ant-select-selection-item"
                                title="离线审核"
                              >
                                离线审核
                              </span>
                            </div>
                            <span
                              aria-hidden="true"
                              class="ant-select-arrow"
                              style="user-select: none;"
                              unselectable="on"
                            >
                              <span
                                aria-label="down"
                                class="anticon anticon-down ant-select-suffix"
                                role="img"
                              >
                                <svg
                                  aria-hidden="true"
                                  data-icon="down"
                                  fill="currentColor"
                                  focusable="false"
                                  height="1em"
                                  viewBox="64 64 896 896"
                                  width="1em"
                                >
                                  <path
                                    d="M884 256h-75c-5.1 0-9.9 2.5-12.9 6.6L512 654.2 227.9 262.6c-3-4.1-7.8-6.6-12.9-6.6h-75c-6.5 0-10.3 7.4-6.5 12.7l352.6 486.1c12.8 17.6 39 17.6 51.7 0l352.6-486.1c3.9-5.3.1-12.7-6.4-12.7z"
                                  />
                                </svg>
                              </span>
                            </span>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  class="ant-form-item has-required-style css-1jlm9cy"
                >
                  <div
                    class="ant-row ant-form-item-row"
                  >
                    <div
                      class="ant-col ant-form-item-label"
                    >
                      <label
                        class="ant-form-item-required"
                        for="instance_type"
                        title="数据源类型"
                      >
                        数据源类型
                      </label>
                    </div>
                    <div
                      class="ant-col ant-form-item-control"
                    >
                      <div
                        class="ant-form-item-control-input"
                      >
                        <div
                          class="ant-form-item-control-input-content"
                        >
                          <div
                            aria-required="true"
                            class="ant-select ant-select-in-form-item basic-select-wrapper css-x5nat1 ant-select-single ant-select-allow-clear ant-select-show-arrow"
                          >
                            <div
                              class="ant-select-selector"
                            >
                              <span
                                class="ant-select-selection-search"
                              >
                                <input
                                  aria-activedescendant="instance_type_list_0"
                                  aria-autocomplete="list"
                                  aria-controls="instance_type_list"
                                  aria-expanded="false"
                                  aria-haspopup="listbox"
                                  aria-owns="instance_type_list"
                                  aria-required="true"
                                  autocomplete="off"
                                  class="ant-select-selection-search-input"
                                  id="instance_type"
                                  readonly=""
                                  role="combobox"
                                  style="opacity: 0;"
                                  type="search"
                                  unselectable="on"
                                  value=""
                                />
                              </span>
                              <span
                                class="ant-select-selection-placeholder"
                              >
                                请选择{{name}}
                              </span>
                            </div>
                            <span
                              aria-hidden="true"
                              class="ant-select-arrow"
                              style="user-select: none;"
                              unselectable="on"
                            >
                              <span
                                aria-label="down"
                                class="anticon anticon-down ant-select-suffix"
                                role="img"
                              >
                                <svg
                                  aria-hidden="true"
                                  data-icon="down"
                                  fill="currentColor"
                                  focusable="false"
                                  height="1em"
                                  viewBox="64 64 896 896"
                                  width="1em"
                                >
                                  <path
                                    d="M884 256h-75c-5.1 0-9.9 2.5-12.9 6.6L512 654.2 227.9 262.6c-3-4.1-7.8-6.6-12.9-6.6h-75c-6.5 0-10.3 7.4-6.5 12.7l352.6 486.1c12.8 17.6 39 17.6 51.7 0l352.6-486.1c3.9-5.3.1-12.7-6.4-12.7z"
                                  />
                                </svg>
                              </span>
                            </span>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  class="ant-form-item has-required-style has-label-tip css-1jlm9cy"
                >
                  <div
                    class="ant-row ant-form-item-row"
                  >
                    <div
                      class="ant-col ant-form-item-label"
                    >
                      <label
                        class="ant-form-item-required"
                        for="rule_template_name"
                        title=""
                      >
                        <div
                          class="label-cont-custom"
                        >
                          <div>
                            审核规则模板
                          </div>
                          <div
                            class="tip-content-box"
                          >
                            请选择平台审核SQL时应用的审核规则模板。
                          </div>
                        </div>
                      </label>
                    </div>
                    <div
                      class="ant-col ant-form-item-control"
                    >
                      <div
                        class="ant-form-item-control-input"
                      >
                        <div
                          class="ant-form-item-control-input-content"
                        >
                          <div
                            aria-required="true"
                            class="ant-select ant-select-in-form-item basic-select-wrapper css-x5nat1 ant-select-single ant-select-show-arrow"
                          >
                            <div
                              class="ant-select-selector"
                            >
                              <span
                                class="ant-select-selection-search"
                              >
                                <input
                                  aria-activedescendant="rule_template_name_list_0"
                                  aria-autocomplete="list"
                                  aria-controls="rule_template_name_list"
                                  aria-expanded="false"
                                  aria-haspopup="listbox"
                                  aria-owns="rule_template_name_list"
                                  aria-required="true"
                                  autocomplete="off"
                                  class="ant-select-selection-search-input"
                                  id="rule_template_name"
                                  readonly=""
                                  role="combobox"
                                  style="opacity: 0;"
                                  type="search"
                                  unselectable="on"
                                  value=""
                                />
                              </span>
                              <span
                                class="ant-select-selection-placeholder"
                              >
                                请选择{{name}}
                              </span>
                            </div>
                            <span
                              aria-hidden="true"
                              class="ant-select-arrow"
                              style="user-select: none;"
                              unselectable="on"
                            >
                              <span
                                aria-label="down"
                                class="anticon anticon-down ant-select-suffix"
                                role="img"
                              >
                                <svg
                                  aria-hidden="true"
                                  data-icon="down"
                                  fill="currentColor"
                                  focusable="false"
                                  height="1em"
                                  viewBox="64 64 896 896"
                                  width="1em"
                                >
                                  <path
                                    d="M884 256h-75c-5.1 0-9.9 2.5-12.9 6.6L512 654.2 227.9 262.6c-3-4.1-7.8-6.6-12.9-6.6h-75c-6.5 0-10.3 7.4-6.5 12.7l352.6 486.1c12.8 17.6 39 17.6 51.7 0l352.6-486.1c3.9-5.3.1-12.7-6.4-12.7z"
                                  />
                                </svg>
                              </span>
                            </span>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </form>
            </div>
            <div
              class="ant-drawer-footer"
            >
              <div
                class="ant-space ant-space-horizontal ant-space-align-center"
              >
                <div
                  class="ant-space-item"
                  style="margin-right: 8px;"
                >
                  <button
                    class="ant-btn ant-btn-default basic-button-wrapper css-10ae2zl"
                    type="button"
                  >
                    <span>
                      关 闭
                    </span>
                  </button>
                </div>
                <div
                  class="ant-space-item"
                >
                  <button
                    class="ant-btn ant-btn-primary basic-button-wrapper css-10ae2zl"
                    type="button"
                  >
                    <span>
                      提 交
                    </span>
                  </button>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        aria-hidden="true"
        data-sentinel="end"
        style="width: 0px; height: 0px; overflow: hidden; outline: none; position: absolute;"
        tabindex="0"
      />
    </div>
  </div>
</body>
`;

exports[`sqle//PipelineConfiguration/Create render create pipeline 2`] = `
<body>
  <div>
    <div
      class="actiontech-page-header-namespace fixed-style css-1xspr0w"
    >
      <div
        class="title"
      >
        <a
          href="/sqle/project/700300/pipeline-configuration"
        >
          <button
            class="ant-btn ant-btn-default basic-button-wrapper css-10ae2zl"
            type="button"
          >
            <span
              class="ant-btn-icon"
            >
              <svg
                height="16"
                viewBox="0 0 16 16"
                width="16"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M5.219 7.333h8.114v1.334H5.22l3.576 3.576-.943.942L2.667 8l5.185-5.185.943.942z"
                  fill="currentColor"
                />
              </svg>
            </span>
            <span>
              返回流水线配置列表
            </span>
          </button>
        </a>
      </div>
      <div
        class="extra"
      />
    </div>
    <section
      class="basic-result-wrapper css-7vto1s"
    >
      <div
        class="ant-result ant-result-info"
      >
        <div
          class="ant-result-icon"
        >
          <svg
            fill="none"
            height="160"
            viewBox="0 0 160 160"
            width="160"
            xmlns="http://www.w3.org/2000/svg"
          >
            <g
              filter="url(#filter0_d_3998_2816)"
            >
              <rect
                fill="white"
                height="100"
                rx="6"
                width="128"
                x="15"
                y="30"
              />
              <rect
                height="99"
                rx="5.5"
                stroke="#F2F1F0"
                width="127"
                x="15.5"
                y="30.5"
              />
            </g>
            <circle
              cx="21.5"
              cy="36.5"
              fill="#F66074"
              r="1.5"
            />
            <circle
              cx="27.5"
              cy="36.5"
              fill="#EDB054"
              r="1.5"
            />
            <circle
              cx="33.5"
              cy="36.5"
              fill="#1CB889"
              r="1.5"
            />
            <rect
              fill="#EBEAE7"
              height="5"
              rx="2"
              width="37"
              x="27"
              y="52"
            />
            <rect
              fill="#EBEAE7"
              height="4"
              rx="2"
              width="17"
              x="27"
              y="62"
            />
            <rect
              fill="#F2F1EF"
              height="4"
              rx="2"
              width="19"
              x="70"
              y="78"
            />
            <rect
              fill="#F2F1EF"
              height="4"
              rx="2"
              width="40"
              x="27"
              y="78"
            />
            <rect
              fill="#F2F1EF"
              height="4"
              rx="2"
              width="47"
              x="42"
              y="87"
            />
            <rect
              fill="#F66074"
              height="4"
              rx="2"
              width="12"
              x="27"
              y="87"
            />
            <rect
              fill="#F66074"
              height="4"
              rx="2"
              width="10"
              x="79"
              y="96"
            />
            <rect
              fill="#F2F1EF"
              height="4"
              rx="2"
              width="13"
              x="63"
              y="96"
            />
            <rect
              fill="#F2F1EF"
              height="4"
              rx="2"
              width="33"
              x="27"
              y="96"
            />
            <rect
              fill="#F2F1EF"
              height="4"
              rx="2"
              width="34"
              x="55"
              y="105"
            />
            <rect
              fill="#F66074"
              height="4"
              rx="2"
              width="25"
              x="27"
              y="105"
            />
            <rect
              fill="#F2F1EF"
              height="4"
              rx="2"
              width="49"
              x="27"
              y="114"
            />
            <rect
              fill="#F7F6F4"
              height="72"
              rx="3"
              width="32"
              x="99"
              y="48"
            />
            <rect
              fill="white"
              height="6"
              rx="1"
              stroke="#E8E7E6"
              width="24"
              x="103"
              y="52"
            />
            <rect
              fill="white"
              height="6"
              rx="1"
              stroke="#E8E7E6"
              width="24"
              x="103"
              y="76"
            />
            <g
              filter="url(#filter1_d_3998_2816)"
            >
              <rect
                fill="#4583FF"
                height="8"
                rx="2"
                width="26"
                x="102"
                y="63"
              />
            </g>
            <rect
              fill="white"
              height="6"
              rx="1"
              stroke="#E8E7E6"
              width="24"
              x="103"
              y="87"
            />
            <rect
              fill="white"
              height="6"
              rx="1"
              stroke="#E8E7E6"
              width="24"
              x="103"
              y="98"
            />
            <rect
              fill="white"
              height="6"
              rx="1"
              stroke="#E8E7E6"
              width="24"
              x="103"
              y="109"
            />
            <g
              filter="url(#filter2_d_3998_2816)"
            >
              <path
                d="M134 136C138.418 136 142.418 134.209 145.314 131.314C148.209 128.418 150 124.418 150 120C150 115.582 148.209 111.582 145.314 108.686C142.418 105.791 138.418 104 134 104C129.582 104 125.582 105.791 122.686 108.686C119.791 111.582 118 115.582 118 120C118 124.418 119.791 128.418 122.686 131.314C125.582 134.209 129.582 136 134 136Z"
                fill="#1CB889"
              />
            </g>
            <path
              d="M128.4 120L132.6 124.2L141 115.8"
              stroke="white"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="3"
            />
            <rect
              fill="url(#paint0_linear_3998_2816)"
              height="50"
              width="37"
              x="27"
              y="73"
            />
            <rect
              fill="#15C7D4"
              height="50"
              width="2"
              x="62"
              y="73"
            />
            <defs>
              <filter
                color-interpolation-filters="sRGB"
                filterUnits="userSpaceOnUse"
                height="110"
                id="filter0_d_3998_2816"
                width="138"
                x="10"
                y="27"
              >
                <feflood
                  flood-opacity="0"
                  result="BackgroundImageFix"
                />
                <fecolormatrix
                  in="SourceAlpha"
                  result="hardAlpha"
                  type="matrix"
                  values="0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 127 0"
                />
                <feoffset
                  dy="2"
                />
                <fegaussianblur
                  stdDeviation="2.5"
                />
                <fecomposite
                  in2="hardAlpha"
                  operator="out"
                />
                <fecolormatrix
                  type="matrix"
                  values="0 0 0 0 0.2 0 0 0 0 0.173333 0 0 0 0 0.12 0 0 0 0.1 0"
                />
                <feblend
                  in2="BackgroundImageFix"
                  mode="normal"
                  result="effect1_dropShadow_3998_2816"
                />
                <feblend
                  in="SourceGraphic"
                  in2="effect1_dropShadow_3998_2816"
                  mode="normal"
                  result="shape"
                />
              </filter>
              <filter
                color-interpolation-filters="sRGB"
                filterUnits="userSpaceOnUse"
                height="16"
                id="filter1_d_3998_2816"
                width="34"
                x="98"
                y="60"
              >
                <feflood
                  flood-opacity="0"
                  result="BackgroundImageFix"
                />
                <fecolormatrix
                  in="SourceAlpha"
                  result="hardAlpha"
                  type="matrix"
                  values="0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 127 0"
                />
                <feoffset
                  dy="1"
                />
                <fegaussianblur
                  stdDeviation="2"
                />
                <fecomposite
                  in2="hardAlpha"
                  operator="out"
                />
                <fecolormatrix
                  type="matrix"
                  values="0 0 0 0 0.270588 0 0 0 0 0.513726 0 0 0 0 1 0 0 0 0.4 0"
                />
                <feblend
                  in2="BackgroundImageFix"
                  mode="normal"
                  result="effect1_dropShadow_3998_2816"
                />
                <feblend
                  in="SourceGraphic"
                  in2="effect1_dropShadow_3998_2816"
                  mode="normal"
                  result="shape"
                />
              </filter>
              <filter
                color-interpolation-filters="sRGB"
                filterUnits="userSpaceOnUse"
                height="44"
                id="filter2_d_3998_2816"
                width="44"
                x="112"
                y="100"
              >
                <feflood
                  flood-opacity="0"
                  result="BackgroundImageFix"
                />
                <fecolormatrix
                  in="SourceAlpha"
                  result="hardAlpha"
                  type="matrix"
                  values="0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 127 0"
                />
                <feoffset
                  dy="2"
                />
                <fegaussianblur
                  stdDeviation="3"
                />
                <fecomposite
                  in2="hardAlpha"
                  operator="out"
                />
                <fecolormatrix
                  type="matrix"
                  values="0 0 0 0 0.109804 0 0 0 0 0.721569 0 0 0 0 0.537255 0 0 0 0.4 0"
                />
                <feblend
                  in2="BackgroundImageFix"
                  mode="normal"
                  result="effect1_dropShadow_3998_2816"
                />
                <feblend
                  in="SourceGraphic"
                  in2="effect1_dropShadow_3998_2816"
                  mode="normal"
                  result="shape"
                />
              </filter>
              <lineargradient
                gradientUnits="userSpaceOnUse"
                id="paint0_linear_3998_2816"
                x1="64"
                x2="27"
                y1="73"
                y2="73"
              >
                <stop
                  stop-color="#1ACEDB"
                  stop-opacity="0.3"
                />
                <stop
                  offset="1"
                  stop-color="white"
                  stop-opacity="0"
                />
              </lineargradient>
            </defs>
          </svg>
        </div>
        <div
          class="ant-result-title"
        >
          流水线创建成功
        </div>
        <div
          class="ant-result-subtitle"
        >
          现在您可以根据对接说明，配置上游CI/CD流水线，以获取审核/上线结果。
        </div>
        <div
          class="ant-result-extra"
        >
          <button
            class="ant-btn ant-btn-primary basic-button-wrapper css-10ae2zl"
            type="button"
          >
            <span>
              获取流水线对接说明
            </span>
          </button>
        </div>
      </div>
    </section>
  </div>
</body>
`;

exports[`sqle//PipelineConfiguration/Create render init snap 1`] = `
<body>
  <div>
    <div
      class="actiontech-page-header-namespace fixed-style css-1xspr0w"
    >
      <div
        class="title"
      >
        <a
          href="/sqle/project/700300/pipeline-configuration"
        >
          <button
            class="ant-btn ant-btn-default basic-button-wrapper css-10ae2zl"
            type="button"
          >
            <span
              class="ant-btn-icon"
            >
              <svg
                height="16"
                viewBox="0 0 16 16"
                width="16"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M5.219 7.333h8.114v1.334H5.22l3.576 3.576-.943.942L2.667 8l5.185-5.185.943.942z"
                  fill="currentColor"
                />
              </svg>
            </span>
            <span>
              返回流水线配置列表
            </span>
          </button>
        </a>
      </div>
      <div
        class="extra"
      >
        <div
          class="ant-space ant-space-horizontal ant-space-align-center"
        >
          <div
            class="ant-space-item"
            style="margin-right: 8px;"
          >
            <button
              class="ant-btn ant-btn-default basic-button-wrapper css-10ae2zl"
              type="button"
            >
              <span>
                重 置
              </span>
            </button>
          </div>
          <div
            class="ant-space-item"
          >
            <button
              class="ant-btn ant-btn-primary basic-button-wrapper css-10ae2zl"
              type="button"
            >
              <span>
                保 存
              </span>
            </button>
          </div>
        </div>
      </div>
    </div>
    <form
      class="ant-form ant-form-horizontal hasTopHeader css-19jfn7e"
    >
      <section
        class="css-1114g56"
      >
        <section
          class="css-bspaai"
        >
          <h3
            class="ant-typography css-p50odb"
          >
            <svg
              class="title-icon"
              height="40"
              viewBox="0 0 24 28"
              width="42"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M4 3.333v5.334h16V3.333h2.675c.732 0 1.325.594 1.325 1.325v21.35c0 .732-.593 1.325-1.325 1.325H1.325A1.325 1.325 0 0 1 0 26.01V4.658c0-.732.593-1.325 1.325-1.325zm4 17.334H5.333v2.666H8zm0-4H5.333v2.666H8zm0-4H5.333v2.666H8zm9.333-12V6H6.667V.667z"
                fill="#C3C6CD"
              />
            </svg>
            创建流水线配置
          </h3>
          <h1
            class="ant-typography css-1eepp70"
          >
            基础配置
          </h1>
          <div
            class="ant-form-item has-required-style has-label-tip css-1jlm9cy"
          >
            <div
              class="ant-row ant-form-item-row"
            >
              <div
                class="ant-col ant-col-11 ant-form-item-label ant-form-item-label-left"
              >
                <label
                  class="ant-form-item-required ant-form-item-no-colon"
                  for="name"
                  title=""
                >
                  <div
                    class="label-cont-custom"
                  >
                    <div>
                      流水线名称
                    </div>
                    <div
                      class="tip-content-box"
                    >
                      请填写上游CI/CD平台创建的流水线名称，或其他方便理解、建立关联的名称。
                    </div>
                  </div>
                </label>
              </div>
              <div
                class="ant-col ant-col-11 ant-col-push-2 ant-form-item-control"
              >
                <div
                  class="ant-form-item-control-input"
                >
                  <div
                    class="ant-form-item-control-input-content"
                  >
                    <input
                      aria-required="true"
                      class="ant-input basic-input-wrapper css-1pd1cd5"
                      id="name"
                      placeholder="请输入{{name}}"
                      type="text"
                      value=""
                    />
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            class="ant-form-item has-label-tip css-1jlm9cy"
          >
            <div
              class="ant-row ant-form-item-row"
            >
              <div
                class="ant-col ant-col-11 ant-form-item-label ant-form-item-label-left"
              >
                <label
                  class="ant-form-item-no-colon"
                  for="description"
                  title=""
                >
                  <div
                    class="label-cont-custom"
                  >
                    <div>
                      流水线描述
                    </div>
                    <div
                      class="tip-content-box"
                    >
                      请输入对此条流水线的用途、预期等相关信息。
                    </div>
                  </div>
                </label>
              </div>
              <div
                class="ant-col ant-col-11 ant-col-push-2 ant-form-item-control"
              >
                <div
                  class="ant-form-item-control-input"
                >
                  <div
                    class="ant-form-item-control-input-content"
                  >
                    <textarea
                      class="ant-input basic-input-wrapper css-1pd1cd5"
                      id="description"
                      placeholder="请输入{{name}}"
                    />
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            class="ant-form-item has-label-tip css-1jlm9cy"
          >
            <div
              class="ant-row ant-form-item-row"
            >
              <div
                class="ant-col ant-col-11 ant-form-item-label ant-form-item-label-left"
              >
                <label
                  class="ant-form-item-no-colon"
                  for="address"
                  title=""
                >
                  <div
                    class="label-cont-custom"
                  >
                    <div>
                      流水线地址
                    </div>
                    <div
                      class="tip-content-box"
                    >
                      请提供您在上游CI/CD平台创建的流水线项目地址，如http(s)://ip:port/job/jobname/，方便建立关联。如尚未创建流水线，可后续编辑流水线补充。
                    </div>
                  </div>
                </label>
              </div>
              <div
                class="ant-col ant-col-11 ant-col-push-2 ant-form-item-control"
              >
                <div
                  class="ant-form-item-control-input"
                >
                  <div
                    class="ant-form-item-control-input-content"
                  >
                    <input
                      class="ant-input basic-input-wrapper css-1pd1cd5"
                      id="address"
                      placeholder="请输入{{name}}"
                      type="text"
                      value=""
                    />
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            class="ant-form-item css-1jlm9cy"
          >
            <div
              class="ant-row ant-form-item-row"
            >
              <div
                class="ant-col ant-col-24 ant-form-item-control"
              >
                <div
                  class="ant-form-item-control-input"
                >
                  <div
                    class="ant-form-item-control-input-content"
                  >
                    <section
                      class="css-xsucw9"
                    >
                      <h1
                        class="ant-typography css-1eepp70"
                      >
                        <div
                          class="ant-space ant-space-horizontal ant-space-align-center sub-title"
                        >
                          <div
                            class="ant-space-item"
                            style="margin-right: 8px;"
                          >
                            节点配置
                          </div>
                          <div
                            class="ant-space-item"
                          >
                            <button
                              class="ant-btn ant-btn-primary basic-button-wrapper css-10ae2zl"
                              type="button"
                            >
                              <span>
                                添加节点
                              </span>
                            </button>
                          </div>
                        </div>
                      </h1>
                      <div
                        class="ant-table-wrapper actiontech-table-namespace css-fxd6ka"
                      >
                        <div
                          class="ant-spin-nested-loading"
                        >
                          <div
                            class="ant-spin-container"
                          >
                            <div
                              class="ant-table ant-table-empty ant-table-fixed-column ant-table-scroll-horizontal ant-table-has-fix-right"
                            >
                              <div
                                class="ant-table-container"
                              >
                                <div
                                  class="ant-table-content"
                                  style="overflow-x: auto; overflow-y: hidden;"
                                >
                                  <table
                                    style="min-width: 100%; table-layout: auto;"
                                  >
                                    <colgroup>
                                      <col
                                        style="width: 80px;"
                                      />
                                      <col />
                                      <col />
                                      <col
                                        style="width: 164px;"
                                      />
                                    </colgroup>
                                    <thead
                                      class="ant-table-thead"
                                    >
                                      <tr>
                                        <td
                                          class="ant-table-cell"
                                          style="text-align: center;"
                                        />
                                        <th
                                          class="ant-table-cell"
                                          scope="col"
                                        >
                                          节点名称
                                        </th>
                                        <th
                                          class="ant-table-cell"
                                          scope="col"
                                        >
                                          节点类型
                                        </th>
                                        <th
                                          class="ant-table-cell actiontech-table-actions-column ant-table-cell-fix-right ant-table-cell-fix-right-first"
                                          scope="col"
                                          style="position: sticky; right: 0px;"
                                        >
                                          操作
                                        </th>
                                      </tr>
                                    </thead>
                                    <tbody
                                      class="ant-table-tbody"
                                    >
                                      <tr
                                        aria-hidden="true"
                                        class="ant-table-measure-row"
                                        style="height: 0px; font-size: 0px;"
                                      >
                                        <td
                                          style="padding: 0px; border: 0px; height: 0px;"
                                        >
                                          <div
                                            style="height: 0px; overflow: hidden;"
                                          >
                                             
                                          </div>
                                        </td>
                                        <td
                                          style="padding: 0px; border: 0px; height: 0px;"
                                        >
                                          <div
                                            style="height: 0px; overflow: hidden;"
                                          >
                                             
                                          </div>
                                        </td>
                                        <td
                                          style="padding: 0px; border: 0px; height: 0px;"
                                        >
                                          <div
                                            style="height: 0px; overflow: hidden;"
                                          >
                                             
                                          </div>
                                        </td>
                                        <td
                                          style="padding: 0px; border: 0px; height: 0px;"
                                        >
                                          <div
                                            style="height: 0px; overflow: hidden;"
                                          >
                                             
                                          </div>
                                        </td>
                                      </tr>
                                      <tr
                                        aria-describedby="DndDescribedBy-0"
                                        aria-disabled="false"
                                        aria-pressed="true"
                                        aria-roledescription="sortable"
                                        class="ant-table-placeholder"
                                        role="button"
                                        style="position: relative; z-index: 999;"
                                        tabindex="0"
                                      >
                                        <td
                                          class="ant-table-cell"
                                          colspan="4"
                                        >
                                          <div
                                            class="ant-table-expanded-row-fixed"
                                            style="width: 0px; position: sticky; left: 0px; overflow: hidden;"
                                          />
                                        </td>
                                      </tr>
                                    </tbody>
                                  </table>
                                </div>
                              </div>
                            </div>
                          </div>
                        </div>
                      </div>
                      <div
                        id="DndDescribedBy-0"
                        style="display: none;"
                      >
                        
    To pick up a draggable item, press the space bar.
    While dragging, use the arrow keys to move the item.
    Press space again to drop the item in its new position, or press escape to cancel.
  
                      </div>
                      <div
                        aria-atomic="true"
                        aria-live="assertive"
                        id="DndLiveRegion-0"
                        role="status"
                        style="position: fixed; top: 0px; left: 0px; width: 1px; height: 1px; margin: -1px; border: 0px; padding: 0px; overflow: hidden; clip-path: inset(100%); white-space: nowrap;"
                      />
                    </section>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </section>
      </section>
    </form>
  </div>
</body>
`;
